# Gemma4MangaTranslatorForKorean

./: .editorconfig  .gitignore  .prettierignore  .tmp-local-pipeline-tail.txt  .tmp-settings-ui.txt  LICENSE  README.md  electron-builder.config.cjs  eslint.config.mjs  knip.json  llm-vram-projections.json  package-lock.json  package.json  vite.blockTextLayout.config.ts  vitest.config.ts
scripts/: benchmark-gemma-economy.cjs  build.cjs  dev.cjs  prepare-beellama.cjs  prepare-flux-cuda-runtime.cjs  prepare-flux-klein-runner.cjs  prepare-ocr-python.cjs  render-ocr-bbox.cjs  run-flux-pattern-smoke.cjs  run-gemma-economy-benchmark.cjs  run-gemma-solid-smoke.cjs  run-smoke-overlay.cjs  smoke-flux-pattern-chapter.cjs  smoke-overlay.cjs
tests/: appSettings.test.ts  blockBackground.test.ts  blockTextLayoutEngine.test.ts  chapterEditHistory.test.ts  chapterSync.test.ts  customFonts.test.ts  fluxWorker.test.ts  geometry.test.ts  gpuInfo.test.ts  inpaintingArtifactCleanup.test.ts  installerConfig.test.ts  ipcSchemas.test.ts  jobCleanup.test.ts  jobProgress.test.ts  koreanLineBreaks.test.ts  libraryBatchImport.test.ts  libraryFilter.test.ts  libraryImportLimits.test.ts  llmVramBudget.test.ts  mainWindowGuards.test.ts  ocrGeometryLocks.test.ts  ocrScript.test.ts  ocrTextPrompt.test.ts  overlayItems.test.ts  overlayParser.test.ts  pageExportSecurity.test.ts  pageNavigation.test.ts  pipelineOptions.test.ts  promptContract.test.ts  region.test.ts  renderLayout.test.ts  runtimeModelLaunch.test.ts  (+5 more)
tools/mgt-flux-klein-runner/: Cargo.toml
tools/mgt-flux-klein-runner/src/: main.rs
(+199 files in other folders)
