[package]
name = "mgt-flux-klein"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
koharu-ml = { git = "https://github.com/mayocream/koharu", package = "koharu-ml", default-features = false, features = ["cuda"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[patch.crates-io]
candle-core = { git = "https://github.com/mayocream/candle", branch = "flash-attn" }
candle-nn = { git = "https://github.com/mayocream/candle", branch = "flash-attn" }
candle-transformers = { git = "https://github.com/mayocream/candle", branch = "flash-attn" }
candle-flash-attn = { git = "https://github.com/mayocream/candle", branch = "flash-attn" }
ug = { git = "https://github.com/mayocream/ug", branch = "cuda-dynamic-loading" }
ug-cuda = { git = "https://github.com/mayocream/ug", branch = "cuda-dynamic-loading" }
